# veel-practice-pronunciation

./: pyproject.toml
