[tool.poetry]
name = "veel-practice-pronunciation"
version = "0.1.0"
description = "Simple python tool that helps you practice pronunciation through recording a source audio, and your attempts at reproducing the same."
authors = ["Tejas Anil Shah <tejasanilshah@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"
pylint = "^2.17.4"
isort = "^5.12.0"
pytest = "^7.3.1"
coverage = "^7.2.5"
cowsay = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
